# sentenCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
encoder/include/: EncoderInterface.h  IEncoder.h  VocabList.h  WordPiece.h
encoder/src/: VocabList.cpp  WordPiece.cpp
examples/: example_usage_1.cpp
include/sentenCPP/embedding_utils/: VectorMaths.h
include/sentenCPP/inference/: InferenceInterface.h  OnnxEngine.h
include/sentenCPP/tokenizer/: TokenizerInterface.h  VocabList.h  WordPiece.h
inference/include/: OnnxEngine.h  OnnxModel.h
inference/src/: OnnxEngine.cpp  OnnxModel.cpp
src/: OnnxEngine.cpp  VectorMaths.cpp  VocabList.cpp  WordPiece.cpp
tokeniser/include/: VocabList.h
tokenizer/include/: ITokenizer.h  MaxMatch.h  TokenizerInterface.h  VocabList.h  WordPiece.h
tokenizer/src/: MaxMatch.cpp  VocabList.cpp  WordPiece.cpp
